--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
   			
 			<div id="layersSideBarOutlinesheader">
-				<img src="https://maps.nls.uk/img/move.png" width="30" alt="Move and drag panel" title="Select and drag this panel" class="prevent-select" />
+				<img src="https://maps.nls.uk/geo/img/move.png" width="30" alt="Move and drag panel" title="Select and drag this panel" class="prevent-select" />
 			</div>
 
 
@@ -732,7 +732,7 @@
 
 					<div id="mapkeypanel" class="hidden">
 						<div id="mapkeypanelheader" style="cursor: move">
-							<img src="https://maps.nls.uk/img/move.png" width="30" alt="Move and drag panel" title="Select and drag this panel" id="panelmoveicon" />
+							<img src="https://maps.nls.uk/geo/img/move.png" width="30" alt="Move and drag panel" title="Select and drag this panel" id="panelmoveicon" />
 								<button type="button" id="mapkeypanelhide" class="close"  aria-label="Close" class="hidden" ><span aria-hidden="true">&times;</span></button>
 						</div>
 
