--- a/index.html
+++ b/index.html
@@ -959,14 +959,14 @@
     		<script type="text/javascript" src="https://maps.nls.uk/geo/scripts/nouislider.js"></script>
 		<script type="text/javascript" src="https://maps.nls.uk/geo/scripts/proj4.js"></script>
 
-		<script type="text/javascript" src="/assets/scripts/accordion.js" async></script>
+		<script type="text/javascript" src="https://maps.nls.uk/assets/scripts/accordion.js" async></script>
 
 
 
 			<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 			<script type="text/javascript" src="https://maps.nls.uk/geo/scripts/ol_6_15_1.js"></script>
 
-			<script src=src="https://maps.nls.uk/geo/scripts/html2canvas.js"></script>
+			<script src="https://maps.nls.uk/geo/scripts/html2canvas.js"></script>
 
 			<script type="text/javascript" src="https://maps.nls.uk/geo/scripts/gaz.js"></script>
 			<script type="text/javascript" src="https://maps.nls.uk/geo/scripts/conversion.js"></script>
@@ -977,7 +977,7 @@
 			<script src="https://cdn.jsdelivr.net/npm/@allmaps/openlayers/dist/bundled/allmaps-openlayers-8.umd.js"></script>
 			
 		
-		    <script type="text/javascript" src="/assets/scripts/jspdf.min.js" async></script>
+		    <script type="text/javascript" src="https://maps.nls.uk/assets/scripts/jspdf.min.js" async></script>
 			<script type="text/javascript" src="https://maps.nls.uk/geo/scripts/FileSaver.min.js" async></script>
 			
 			<script type="text/javascript" src="GpPluginOpenLayers.js" ></script>
@@ -1172,4 +1172,5 @@ function openFancy(){
 
 </body>
 </html>
+
 
